shell脚本更新